#
# This file is protected by Copyright. Please refer to the COPYRIGHT file 
# distributed with this source distribution.
# 
# This file is part of REDHAWK core.
# 
# REDHAWK core is free software: you can redistribute it and/or modify it under 
# the terms of the GNU Lesser General Public License as published by the Free 
# Software Foundation, either version 3 of the License, or (at your option) any 
# later version.
# 
# REDHAWK core is distributed in the hope that it will be useful, but WITHOUT 
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS 
# FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public License for more
# details.
# 
# You should have received a copy of the GNU Lesser General Public License 
# along with this program.  If not, see http://www.gnu.org/licenses/.
#

pkginclude_HEADERS = AggregateDeviceComponent.h \
			BufferManager.h \
			CorbaSequence.h \
			exceptions.h \
			ProcessThread.h \
			PropertyType.h \
			ResourceComponent.h \
			signalling.h \
			UsesPort.h \
			AnyUtils.h \
			callback.h \
			CorbaUtils.h \
			ExecutableDeviceComponent.h \
			PropertyInterface.h \
			prop_helpers.h \
			scaSupport.h \
			ThreadedComponent.h \
			Value.h \
			bitbuffer.h \
			ComplexProperties.h \
			DeviceComponent.h \
			ModuleLoader.h \
			PropertyMap.h \
			ProvidesPort.h \
			shared_buffer.h \
			Transport.h \
			bitops.h \
			concurrent.h \
			ExecutorService.h \
			equals.h \
			Port_impl.h \
			PropertySet_impl.h \
			refcount_memory.h \
			type_traits.h


nobase_pkginclude_HEADERS = shm/Allocator.h \
	     shm/Heap.h \
	     shm/HeapClient.h \
	     shm/MappedFile.h \
	     shm/SuperblockFile.h \
	     shm/System.h

